--- a/package.json
+++ b/package.json
@@ -1,28 +1,29 @@
 {
-  "name": "photo-backend",
+  "name": "photo-app-hybrid",
   "version": "1.0.0",
-  "description": "Local + Cloudflare Hybrid Backend",
-  "main": "server.js",
-  "type": "commonjs",
+  "type": "module",
   "scripts": {
-    "start": "node server.js",
-    "dev": "node server.js"
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview",
+    "server": "node server.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "dependencies": {
-    "child_process": "^1.0.2",
-    "cors": "^2.8.5",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "express": "^4.22.1",
-    "mime-types": "^3.0.2",
-    "onnxruntime-node": "^1.23.2",
-    "sharp": "^0.34.5",
-    "sqlite3": "^5.1.7"
+    "cors": "^2.8.5",
+    "sqlite3": "^5.1.7",
+    "sharp": "^0.34.5"
   },
   "devDependencies": {
+    "@types/react": "^18.2.0",
+    "@types/react-dom": "^18.2.0",
+    "@vitejs/plugin-react": "^4.2.0",
+    "typescript": "^5.3.0",
+    "vite": "^5.1.0",
     "autoprefixer": "^10.4.23",
-    "postcss": "^8.5.6",
-    "tailwindcss": "^4.1.18"
+    "postcss": "^8.4.0",
+    "tailwindcss": "^3.4.0"
   }
 }
