--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,7 +2,6 @@
   "name": "photo-app-hybrid",
   "version": "1.0.0",
   "type": "module",
-  "main": "server.js",
   "scripts": {
     "start": "node server.js",
     "dev": "vite",
@@ -15,15 +14,10 @@
     "express": "^4.22.1",
     "cors": "^2.8.5",
     "sqlite3": "^5.1.7",
-    "sharp": "^0.34.5",
-    "mime-types": "^3.0.2",
-    "onnxruntime-node": "^1.23.2"
+    "sharp": "^0.34.5"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.2.0",
-    "vite": "^5.1.0",
-    "autoprefixer": "^10.4.23",
-    "postcss": "^8.4.0",
-    "tailwindcss": "^3.4.0"
+    "vite": "^5.1.0"
   }
 }
