--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,8 +16,12 @@
     "sqlite3": "^5.1.7",
     "sharp": "^0.34.5"
   },
-  "devDependencies": {
+"devDependencies": {
+    "vite": "^5.1.0",
     "@vitejs/plugin-react": "^4.2.0",
-    "vite": "^5.1.0"
+    "autoprefixer": "^10.4.23",
+    "postcss": "^8.4.0",
+    "@tailwindcss/postcss": "^4.0.0",
+    "tailwindcss": "^4.0.0"
   }
 }
